--- a/Seite/style_tablet.css
+++ b/Seite/style_tablet.css
@@ -14,10 +14,10 @@
         position: fixed;
         display:inline-flex;
         z-index: 100;
-        height: 6vw;
+        height: 50px;
         width: 97%;
         margin-left: 1.5%;
-        margin-top: -3%;
+        margin-top: -20px;
         background-color: white;
     }
 
@@ -29,10 +29,10 @@
     #navigation-mobile {
         position: fixed;
         z-index: 100;
-        height: 5vw;
+        height: 35px;
         width: 97%;
         margin-left: 1.5%;
-        margin-top: 3%;
+        margin-top: 27px;
         background-color: #A59381;
         display: inline-flex;
         cursor: pointer;
@@ -46,14 +46,14 @@
 
     #burger-menu-container p {
         position: absolute;
-        margin-top: -5.2vw;
+        margin-top: -35px;
         margin-left: 6vw;
         margin-bottom: auto;
-        line-height: 6vw;
+        line-height: 35px;
         color: white;
         font-family: bebas-neue-pro, sans-serif;
         font-weight: 300;
-        font-size: 2.3vw;
+        font-size: 17px;
     }
 
     .burger-menu {
@@ -140,11 +140,11 @@
         width: 50%;
         text-align: center;
         text-decoration-line: underline;
-        text-underline-offset: 0.3vw;
+        text-underline-offset: 1px;
         font-family: bebas-neue-pro, sans-serif;
         font-weight: 300;
-        font-size: 2.2vw;
-        line-height: 1vw;
+        font-size: 17px;
+        line-height: 1px;
     }
 
     main {
@@ -184,4 +184,16 @@
         margin-left: 0.5vw;
         margin-right: 0.5vw;
        }
+
+    .sprung1 {
+        margin: -160px;
+    }
+    
+    .sprung2 {
+        margin: -160px;
+    }
+    
+    .sprung3 {
+        margin: -110px;
+    }
 }
