--- a/Seite/style_desktop.css
+++ b/Seite/style_desktop.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 769px) {
+@media (min-width: 0px) {
     html {
         scroll-behavior: smooth;
         overflow-x: hidden;
