--- a/Seite/style_tablet.css
+++ b/Seite/style_tablet.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 0px) and (max-width: 768px) {
+@media (max-width: 768px) {
     
     body {
         text-align: unset;
