--- a/Seite/style_tablet.css
+++ b/Seite/style_tablet.css
@@ -14,7 +14,7 @@
         position: fixed;
         display:inline-flex;
         z-index: 100;
-        height: 50px;
+        height: 40px;
         width: 97%;
         margin-left: 1.5%;
         margin-top: -20px;
@@ -32,7 +32,7 @@
         height: 35px;
         width: 97%;
         margin-left: 1.5%;
-        margin-top: 27px;
+        margin-top: 20px;
         background-color: #A59381;
         display: inline-flex;
         cursor: pointer;
@@ -152,12 +152,16 @@
         margin-top: 20px;
     }
 
+    #heroshot {
+        padding-top: 30px;
+    }
+
     #arrow-back-1 {
         height: 4vw;
         top: 6px;
         position: relative;
     }
-    
+
     #slash-1 {
         height: 4vw;
         top: 6px;
